<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/shoe_detail_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_detail_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_name_hint"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_name_tv" />

        <TextView
            android:id="@+id/shoe_detail_company_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_detail_company_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_name_et" />

        <EditText
            android:id="@+id/shoe_detail_company_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_company_hint"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_company_tv" />

        <TextView
            android:id="@+id/shoe_detail_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_detail_size_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_company_et" />

        <EditText
            android:id="@+id/shoe_detail_size_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_size_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_size_tv" />

        <TextView
            android:id="@+id/shoe_detail_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_detail_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_size_et" />

        <EditText
            android:id="@+id/shoe_detail_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_description_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_description_tv" />

        <Button
            android:id="@+id/shoe_detail_cancel_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shoe_detail_accept_bt"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/shoe_detail_accept_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_accept_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shoe_detail_cancel_bt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>